# sp-radar-signal-processing

./: .gitignore  CMakeLists.txt  README.md
config/: radar.yaml
include/: cfar_detector.h  doppler_processor.h  pulse_compression.h  range_doppler.h  signal_generator.h
src/: cfar_detector.cpp  doppler_processor.cpp  main.cpp  pulse_compression.cpp  range_doppler.cpp  signal_generator.cpp
tests/: test_radar.cpp
