cmake_minimum_required(VERSION 3.14)
project(RadarSignalProcessing VERSION 1.0.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
add_library(radar_lib src/signal_generator.cpp src/pulse_compression.cpp src/cfar_detector.cpp src/doppler_processor.cpp src/range_doppler.cpp)
target_include_directories(radar_lib PUBLIC include)
add_executable(radar_processor src/main.cpp)
target_link_libraries(radar_processor radar_lib)
enable_testing()
add_executable(radar_tests tests/test_radar.cpp)
target_link_libraries(radar_tests radar_lib)
add_test(NAME RadarTests COMMAND radar_tests)
